Tests for ArrayUtils